--- a/src/main/resources/objc/model-body.mustache
+++ b/src/main/resources/objc/model-body.mustache
@@ -1,5 +1,6 @@
 {{#models}}
 {{#model}}
+#import "Date.h"
 #import "{{classname}}.h"
 
 @implementation {{classname}}
@@ -33,9 +34,9 @@
             }
             _{{{name}}} = [[NSArray alloc] initWithArray:objs];
         }
-		}
+	}
     else if([{{name}}_dict isKindOfClass:[NSDictionary class]] && [(NSDictionary*){{name}}_dict count] > 0) {
-        _{{name}} = [[{{complexType}} alloc]initWithValues:{{name}}_dict];
+        _{{name}} = [[{{complexType}} alloc]initWithValues:(NSDictionary*){{name}}_dict];
     }
     else {
         _{{name}} = [[{{complexType}} alloc]initWithValues:{{name}}_dict];
@@ -58,7 +59,7 @@
             }
             [dict setObject:array forKey:@"{{baseName}}"];
         }
-        else if([_{{name}} isKindOfClass:[Date class]]) {
+        else if(_{{name}} && [_{{name}} isKindOfClass:[Date class]]) {
             NSString * dateString = [(Date*)_{{name}} toString];
             if(dateString){
                 [dict setObject:dateString forKey:@"{{name}}"];   
