Now with AS3 Sample Petstore and its test suite

--- a/samples/flash/src/test/flex/AirExecutorApp.mxml
+++ b/samples/flash/src/test/flex/AirExecutorApp.mxml
@@ -19,8 +19,7 @@
             trace("AirExecutorApp.runMe");
             core = new FlexUnitCore();
             core.addListener(new AirCIListener());
-            core.run(test.UserApiTest);
-//            core.run(test.PetApiTest);
+            core.run(test.PetStoreSuite);
         }
 
         public function onInvoke(event: InvokeEvent): void{
