--- a/src/main/resources/scala/apiInvoker.mustache
+++ b/src/main/resources/scala/apiInvoker.mustache
@@ -1,4 +1,4 @@
-package com.wordnik.client
+package {{package}}
 
 import com.wordnik.swagger.core.util.JsonUtil
 import com.sun.jersey.api.client.Client
