added DateTime support to PHP

--- a/src/main/resources/php/Swagger.mustache
+++ b/src/main/resources/php/Swagger.mustache
@@ -156,6 +156,8 @@ class APIClient {
                                     			 $sub_class);
       }
       return $sub_objects;
+    } elseif ($class == 'DateTime') {
+      		return new DateTime($object);
 		} elseif (in_array($class, array('string', 'int', 'float', 'bool'))) {
 			settype($object, $class);
 			return $object;
