--- a/src/main/resources/python/swagger.mustache
+++ b/src/main/resources/python/swagger.mustache
@@ -35,6 +35,7 @@ class ApiClient:
             for param, value in headerParams.iteritems():
                 headers[param] = value
 
+        headers['Content-type'] = 'application/json'
         headers['api_key'] = self.apiKey
 
         if self.cookie:
