--- a/samples/server-generator/scalatra/templates/model.mustache
+++ b/samples/server-generator/scalatra/templates/model.mustache
@@ -14,7 +14,7 @@ case class {{classname}} (
   {{/notes}}
   {{#description}}/* {{description}} */
   {{/description}}
-  var {{name}}: {{datatype}}{{#hasMore}},{{newline}}  {{/hasMore}}
+  {{name}}: {{datatype}}{{#hasMore}},{{newline}}  {{/hasMore}}
   {{/vars}}
 )
 {{/model}}
