--- a/samples/server-generator/scalatra/templates/api.mustache
+++ b/samples/server-generator/scalatra/templates/api.mustache
@@ -1,15 +1,35 @@
 package {{package}}
 
-import com.wordnik.swagger.core.ApiPropertiesReader
 {{#imports}}import {{import}}
 {{/imports}}
-import org.scalatra.ScalatraServlet
+import com.wordnik.swagger.core.ApiPropertiesReader
+import org.scalatra.{ TypedParamSupport, ScalatraServlet }
 import org.scalatra.swagger._
+import org.scalatra.json._
+
+import scala.collection.JavaConverters._
+import org.json4s.{ DefaultFormats, Formats }
 
 import scala.collection.JavaConverters._
 
-class {{className}} (implicit val swagger: Swagger) extends ScalatraServlet with SwaggerBase with SwaggerSupport {
-  protected def buildFullUrl(path: String) = "{{basePath}}/%s" format path
+class {{className}} (implicit val swagger: Swagger) extends ScalatraServlet with TypedParamSupport with JacksonJsonSupport with JValueResult with SwaggerSupport {
+  protected implicit val jsonFormats: Formats = DefaultFormats
+
+  protected val applicationDescription: String = "{{className}}"
+
+  def swaggerToModel(cls: Class[_]) = {
+    val docObj = ApiPropertiesReader.read(cls)
+    val name = docObj.getName
+    val fields = for (field <- docObj.getFields.asScala.filter(d => d.paramType != null))
+      yield (field.name -> ModelField(field.name, field.notes, DataType(field.paramType)))
+
+    Model(name, name, fields.toMap)
+  }
+
+  before() {
+    contentType = formats("json")
+    response.headers += ("Access-Control-Allow-Origin" -> "*")
+  }
 
   {{#operations}}
   {{#operation}}
