fix the scalatra sample

--- a/samples/server-generator/scalatra/templates/api.mustache
+++ b/samples/server-generator/scalatra/templates/api.mustache
@@ -16,6 +16,7 @@ class {{className}} (implicit val swagger: Swagger) extends ScalatraServlet with
   protected implicit val jsonFormats: Formats = DefaultFormats
 
   protected val applicationDescription: String = "{{className}}"
+  override protected val applicationName: String = Some("{{name}}")
 
   def swaggerToModel(cls: Class[_]) = {
     val docObj = ApiPropertiesReader.read(cls)
