--- a/src/main/resources/ruby/model.mustache
+++ b/src/main/resources/ruby/model.mustache
@@ -20,7 +20,7 @@ class {{classname}}
       if {{classname}}.attribute_map["{{{name}}}".to_sym] != nil
         name = "{{{name}}}".to_sym
         value = attributes["{{{baseName}}}"]
-
+        {{#isContainer}}
 	      if value.is_a?(Array)
 	        array = Array.new
 	        value.each do |arrayValue|
@@ -30,9 +30,11 @@ class {{classname}}
 	        {{/complexType}}
 	        end
 	        send("#{name}=", array) if self.respond_to?(name)
-	      else
-	        send("#{name}=", value) if self.respond_to?(name)
 	      end
+        {{/isContainer}}
+        {{^isContainer}}
+	      send("#{name}=", value) if self.respond_to?(name)
+	      {{/isContainer}}
 	    end
       {{/vars}}
     end
